test/tests/operators/from_tcp/tls/error_tls_missing_certfile.txt
error: `tls.certfile` is required when `tls.keyfile` is set
 --> tests/operators/from_tcp/tls/error_tls_missing_certfile.tql:6:14
  |
6 |          tls={keyfile: "tests/operators/from_tcp/test.yaml"} { read_lines }
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
  = hint: set both `tls.certfile` and `tls.keyfile`
